--- a/src/styles/abstracts/_variables.scss
+++ b/src/styles/abstracts/_variables.scss
@@ -23,8 +23,8 @@ $pokemon-types: (
   ghost: #705898,
   dragon: #7038f8,
   dark: #705848,
-  steel: #b8b8d0,
-  fairy: #ee99ac,
+  steel: #3f3f5f,
+  fairy: #7d156a,
 );
 
 // Status colors - Individual declarations
